--- a/kuropptaddin/kuropptaddin.csproj
+++ b/kuropptaddin/kuropptaddin.csproj
@@ -157,6 +157,12 @@
     can be found.
   -->
   <ItemGroup>
+    <Compile Include="MergeNoteForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MergeNoteForm.Designer.cs">
+      <DependentUpon>MergeNoteForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="RehearsalTiming.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
@@ -179,6 +185,9 @@
     <Compile Include="TagEditor.Designer.cs">
       <DependentUpon>TagEditor.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="MergeNoteForm.resx">
+      <DependentUpon>MergeNoteForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
